fixing layout issues

--- a/src/app/components/completed/completed.css
+++ b/src/app/components/completed/completed.css
@@ -78,10 +78,10 @@
   padding: 1rem;
 }
 
-.card-one {
+.noTaskContainer.card-one {
   width: 100%;
 }
-.card-two {
+.noTaskContainer.card-two {
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
@@ -102,5 +102,5 @@
 }
 
 .loadingImage {
-  width: 20%; 
+  width: 20%;
 }
