--- a/src/app/components/pending-list/pending-list.css
+++ b/src/app/components/pending-list/pending-list.css
@@ -89,10 +89,10 @@
   padding: 1rem;
 }
 
-.card-one {
+.noTaskContainer.card-one {
   width: 100%;
 }
-.card-two {
+.noTaskContainer.card-two {
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
